CORE-3030: Display fully information of a calendar for save. r=jianmin

--- a/elements/modify_event.html
+++ b/elements/modify_event.html
@@ -100,6 +100,7 @@
             <small data-l10n-id="calendar">Calendar</small>
             <select name="calendarId" class="loading" nav-scope nav-ignore>
             </select>
+            <span id="calendarIdSpan"></span>
           </a>
         </li>
 
