CORE-3365: Add indicator bar to calendar in add/edit event page. r=jianmin

--- a/elements/modify_event.html
+++ b/elements/modify_event.html
@@ -96,6 +96,7 @@
         </li>
 
         <li class="pack-select sk-modify-event-calendar-id calendar-id" role="presentation" tabindex="0">
+          <div id="calIndicator"></div>
           <a class="menu-item" nav-scope nav-ignore>
             <small data-l10n-id="calendar">Calendar</small>
             <select name="calendarId" class="loading" nav-scope nav-ignore>
