CORE-3096: enable cancel while adding online account. r=jianmin-zhou

--- a/elements/modify_account.html
+++ b/elements/modify_account.html
@@ -18,20 +18,20 @@
       <fieldset>
         <ol role="presentation">
           <li class="user" id="users" role="presentation" tabindex="0" nav-scope>
-            <h5-input-wrapper class="sk-modify-account-username">
+            <h5-input-wrapper class="modify-account-username">
               <label data-l10n-id="field-user">username</label>
               <input name="user" placeholder="Username" />
             </h5-input-wrapper>
           </li>
 
           <li class="password" role="presentation" tabindex="0" nav-scope>
-            <h5-input-wrapper class="sk-modify-account-password">
+            <h5-input-wrapper class="modify-account-password">
               <label data-l10n-id="field-password">password</label>
               <input name="password" data-l10n-id="field-password" placeholder="Password" type="password" />
             </h5-input-wrapper>
           </li>
           <li class="full-url" role="presentation" tabindex="0" nav-scope>
-            <h5-input-wrapper class="sk-modify-account-url">
+            <h5-input-wrapper class="modify-account-url">
               <label data-l10n-id="field-full-url">URL</label>
               <input name="fullUrl" type="url" data-l10n-id="field-full-url" placeholder="URL" />
             </h5-input-wrapper>
