CORE-3677: refactor softkeys helper. r=jianmin

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <script defer src="/shared/soft_keys_helper/soft_keys_helper.js"></script>
 <script defer src="/js/softkey/element_softkeys_map_helper.js"></script>
 <script defer src="/js/softkey/softkey_handler_helper.js"></script>
+<script defer src="/js/softkey/select_handler.js"></script>
 
 <!-- these libs should be managed by volo -->
 <script defer src="/js/ext/date.js"></script>
