CORE-3721: Disable online account entrance. r=jianmin

--- a/elements/setup_calendar.html
+++ b/elements/setup_calendar.html
@@ -16,6 +16,7 @@
         </li>
       </ul>
       
+      <div id="calendar-online-container">
       <h5-separator data-l10n-id="calendar-online"></h5-separator>
 
       <ul class="account-list link-list" aria-labelledby="account-list-header" role="listbox">
@@ -26,14 +27,7 @@
           <h5-list-button class="sk-add-account" icon="add-s" data-l10n-id="setup-add-account"></h5-list-button>
         </li>
       </ul>
-
-      <section class="content">
-      </section>
+      </div>
     </div>
-
-    <section role="status">
-      <p class="notices"></p>
-    </section>
-
   </template>
 </element>
