CORE-3551: Add listener.js to observe calendar and account db change. r=jianmin-zhou

--- a/elements/calendar_chooser.html
+++ b/elements/calendar_chooser.html
@@ -3,7 +3,7 @@
     <div class="calendar-chooser-header">
       <p data-l10n-id="select">Select</p>
     </div>
-    <div class="calendars" nav-scope nav-loop nav-ignore tabIndex="0">
+    <div class="contents" nav-scope nav-loop nav-ignore tabIndex="0">
     </div>
   </template>
 </element>
